# pysdbapi

./: .gitignore  .mypy.ini  .pylintrc  LICENSE  README.md  pyproject.toml  workspace.code-workspace
docs/: mkdocs.yml
docs/docs/en/tutorial/: index.en.md
docs/docs/ru/: index.md
docs/docs/ru/tutorial/: index.ru.md
pysdbapi/: __init__.py  database.py  exceptions.py  main.py  utils.py
pysdbapi/type_hints/: __init__.py  alias.py  type_vars.py
tests/: consts.py  queries.py  test_queries.py
tests/sqlite/: queries.py  test_queries.py
